--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
           node-version: '16'
           cache: 'yarn'
 
-#      - name: Install Yarn
-#        run: npm install -g yarn
+      - name: Install Yarn
+        run: npm install -g yarn
 
       - name: Install dependencies
         run: yarn install --immutable --prefer-offline
