--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
-          cache: 'yarn'
+          node-version: '18'
+          cache: 'npm'
 
-#      - name: Install Yarn
-#        run: npm install -g yarn
+      - name: Install Yarn
+        run: npm install -g yarn
 
       - name: Setup Go environment
         uses: actions/setup-go@v3
