--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.0'
 
 services:
   grafana:
-    container_name: 'targetenergy-tree-panel'
+    container_name: 'targetenergy-grafanatable-panel'
     build:
       context: ./.config
       args:
@@ -10,7 +10,9 @@ services:
     ports:
       - 3000:3000/tcp
     volumes:
-      - ./dist:/var/lib/grafana/plugins/targetenergy-tree-panel
+      - ./dist:/var/lib/grafana/plugins/targetenergy-grafanatable-panel
       - ./provisioning:/etc/grafana/provisioning
+      - ..:/root/targetenergy-grafanatable-panel
     environment:
-      - GF_INSTALL_PLUGINS=grafana-clickhouse-datasource
+      GF_INSTALL_PLUGINS: grafana-clickhouse-datasource
+      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: targetenergy-grafanatable-panel
